modifs design LERIA mobile

--- a/m/leria.html
+++ b/m/leria.html
@@ -43,7 +43,7 @@
                     le
                 </p>
                 <p class="create_site">
-                    projet de cr&#233;ation de site
+                    projet de cr&#233;ation de site Web
                 </p>
             </div>
             <div class="box-header-bot">
@@ -53,7 +53,7 @@
             </div>
             <div>
                 <button class="btn_decouvrir_site" onclick="window.location.href='http://leria-insurance.com/;'">
-                    D&#233;couvrir le site
+                    D&#233;couvrir le site Web
                 </button>
             </div>
         </div>
