changement margin sur l'acoste mobile et fond transparent sur l'embleme

--- a/l'acoste.html
+++ b/l'acoste.html
@@ -109,7 +109,7 @@
         <img class="banniere" src="data/imgs/L'ACOSTE/logo_explication.jpg" alt="Logo de L'ACOSTE expliqué.">
 
         <div class="embleme">
-            <img src="data/imgs/L'ACOSTE/embleme-iconique.jpg"
+            <img src="data/imgs/L'ACOSTE/embleme-iconique.png"
                 alt="Illustration de l'embl&egrave;me iconique de l'acoste" class="embleme-img">
             <p><b>L&apos;embl&egrave;me iconique</b></p>
         </div>
