--- a/m/l'acoste.html
+++ b/m/l'acoste.html
@@ -38,31 +38,36 @@
         </nav>
 
         <div class="hero">
-            <div class="box-top-hero">
-                <p class="le">
-                    le
-                </p>
-                <p class="hero_subtitle">
-                    projet personnel
-                </p>
+            <div>
+                <div class="box-top-hero">
+                    <p class="le">
+                        le
+                    </p>
+                    <p class="hero_subtitle">
+                        projet personnel
+                    </p>
+                </div>
+                <div class="box-hero-h1">
+                    <h1 class="hero-h1">
+                        L&apos;ACOSTE
+                    </h1>
+                </div>
             </div>
-            <div class="box-hero-h1">
-                <h1 class="hero-h1">
-                    L&apos;ACOSTE
-                </h1>
+            <div>
+                <img src="../data/imgs/L'ACOSTE/embleme-iconique.png" alt="">
             </div>
         </div>
         <div class="bot-header">
-            <h3>r&#233;sum&#233;/brief</h3>
+            <h3>R&#233;sum&#233;/brief</h3>
             <p class="text-header">
                 Prenez la marque de votre choix et cr&eacute;er lui un nouvel univers tout en gardant des
                 &eacute;l&eacute;ments cl&eacute;s de son identit&eacute;.
             </p>
-            <h3>&eacute;quipe</h3>
+            <h3>&Eacute;quipe</h3>
             <p class="text-header">
                 Nous &eacute;tions en &eacute;quipe de deux
             </p>
-            <h3>logiciels</h3>
+            <h3>Logiciels</h3>
             <p class="text-header">
                 Illustrator
                 <br>
@@ -105,7 +110,7 @@
         <img class="banniere" src="../data/imgs/L'ACOSTE/logo_explication.jpg" alt="Logo de L'ACOSTE expliqué.">
 
         <div class="embleme">
-            <img src="../data/imgs/L'ACOSTE/embleme-iconique.jpg"
+            <img src="../data/imgs/L'ACOSTE/embleme-iconique.png"
                 alt="Illustration de l'embl&egrave;me iconique de l'acoste" class="embleme-img">
             <p><b>L&apos;embl&egrave;me iconique</b></p>
         </div>
