changement header L'ACOSTE mobile

--- a/m/l'acoste.html
+++ b/m/l'acoste.html
@@ -54,7 +54,7 @@
                 </div>
             </div>
             <div>
-                <img src="../data/imgs/L'ACOSTE/embleme-iconique.png" alt="">
+                <img src="../data/imgs/L'ACOSTE/embleme-iconique.png" alt="Embleme L'ACOSTE." class="embleme-header">
             </div>
         </div>
         <div class="bot-header">
@@ -76,8 +76,11 @@
                 Procreate
             </p>
         </div>
+        <div class="container-down-arrow">
+            <img src="../data/imgs/index/down-arrow.png" alt="Image de flèche qui pointe vers le bas." class="down-arrow">
+        </div>
     </div>
-    <img src="../data/imgs/L'ACOSTE/L'ACOSTE-baniere-1.jpg" alt="Bannière de L'ACOSTE" class="banniere">
+    <img src="../data/imgs/L'ACOSTE/L'ACOSTE-baniere.jpg" alt="Bannière de L'ACOSTE" class="banniere">
     <div class="background-white">
         <div class="box-h2">
             <div class="box-le">
