--- a/m/l'acoste.html
+++ b/m/l'acoste.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="shortcut icon" href="data/imgs/all/MTI.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../data/imgs/all/MTI.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style-L'ACOSTE.css">
     <link rel="stylesheet" href="css/nav.css">
     <link rel="stylesheet" href="css/footer.css">
