Changements sur le design de L'ACOSTE mobile

--- a/m/l'acoste.html
+++ b/m/l'acoste.html
@@ -80,30 +80,25 @@
             <img src="../data/imgs/index/down-arrow.png" alt="Image de flèche qui pointe vers le bas." class="down-arrow">
         </div>
     </div>
-    <img src="../data/imgs/L'ACOSTE/L'ACOSTE-baniere.jpg" alt="Bannière de L'ACOSTE" class="banniere">
+    <img src="../data/imgs/L'ACOSTE/L'ACOSTE-baniere.jpg" alt="Bannière de L'ACOSTE" class="banniere-shadow">
     <div class="background-white">
-        <div class="box-h2">
-            <div class="box-le">
-                <p class="txt-le">le</p>
-            </div>
-            <h2 class="titre_rose">
-                projet
-            </h2>
-        </div>
+        <h2 class="titre_rose">
+            Le projet
+        </h2>
         <div class="text-corp">
             Ce projet de cours d&apos;une semaine a &eacute;t&eacute; tr&egrave;s amusant et m&apos;a permis de d&eacute;velopper mes comp&eacute;tences sur
             Illustrator, Adobe XD et Photoshop. Les designs que vous allez voir ont &eacute;t&eacute; r&eacute;alis&eacute;s par moi-m&ecirc;me, et nous
             avons travaill&eacute; à deux sur le prototype de l&apos;application.
         </div>
 
-        <div class="box-h2">
-            <div class="box-le">
-                <p class="txt-le">le</p>
-            </div>
-            <h2 class="titre_rose">
-                logo
-            </h2>
+        <div class="embleme">
+            <img src="../data/imgs/L'ACOSTE/embleme-iconique.png" alt="Illustration de l'embl&egrave;me iconique de l'acoste">
+            <p>L&apos;embl&egrave;me iconique</p>
         </div>
+
+        <h2 class="titre_rose">
+            Le logo
+        </h2>
         <div class="text-corp">
             Pour garder l’esprit de la marque Lacoste, j’ai choisi de reprendre leur logo de 2001 mais de changer une
             lettre et y mettre le th&egrave;me de l’amour. L’iconique crocodile est toujours visible et transperce avec
@@ -112,41 +107,22 @@
 
         <img class="banniere" src="../data/imgs/L'ACOSTE/logo_explication.jpg" alt="Logo de L'ACOSTE expliqué.">
 
-        <div class="embleme">
-            <img src="../data/imgs/L'ACOSTE/embleme-iconique.png"
-                alt="Illustration de l'embl&egrave;me iconique de l'acoste" class="embleme-img">
-            <p><b>L&apos;embl&egrave;me iconique</b></p>
-        </div>
+        <h2 class="titre_rose">
+            L&apos;application
+        </h2>
+        
     </div>
     <img class="banniere" src="../data/imgs/L'ACOSTE/apercu-pages.jpg" alt="Aperçu des pages de l'application.">
     <div class="background-white">
-
-        <div class="box-h2">
-            <div class="box-le">
-                <p class="txt-le">
-                    l&apos;
-                </p>
-            </div>
-            <h2 class="titre_rose">
-                application
-            </h2>
-        </div>
 
         <p class="text-corp">
             Pour accompagner cette refonte d’identit&eacute; nous avons cr&eacute;er une application de rencontre. Nous avons maquett&eacute;
             l’inscription ainsi que la page profil et match.
         </p>
 
-        <div class="box-h2">
-            <div class="box-le">
-                <p class="txt-le">
-                    les
-                </p>
-            </div>
-            <h2 class="titre_rose">
-                diff&eacute;rents crocos
-            </h2>
-        </div>
+        <h2 class="titre_rose">
+            Les crocos
+        </h2>
         <br>
         <img src="../data/imgs/L'ACOSTE/crocos.jpg"
             alt="Illustrations des crocodiles de différentes couleures : rose, jaune, rouge et vert foncé."
@@ -172,29 +148,15 @@
             dans les lieux verdoyants autour de chez vous.
         </p>
 
-        <div class="box-h2">
-            <div class="box-le">
-                <p class="txt-le">
-                    le
-                </p>
-            </div>
-            <h2 class="titre_rose">
-                design system
-            </h2>
-        </div>
+        <h2 class="titre_rose">
+            Le (mini) design system
+        </h2>
         <br>
         <img src="../data/imgs/L'ACOSTE/design-system.jpg" alt="Illustration du design system." class="banniere">
 
-        <div class="box-h2">
-            <div class="box-le">
-                <p class="txt-le">
-                    l&apos;
-                </p>
-            </div>
-            <h2 class="titre_rose">
-                interface
-            </h2>
-        </div>
+        <h2 class="titre_rose">
+            interface
+        </h2>
         <p class="text-corp">
             <b>L’Onboarding</b>
             <br>
