sous titre L'ACOSTE mobile plus en maj

--- a/m/l'acoste.html
+++ b/m/l'acoste.html
@@ -120,7 +120,7 @@
             l’inscription ainsi que la page profil et match.
         </p>
 
-        <h2 class="titre_rose">
+        <h2 class="subtitre_rose">
             Les crocos
         </h2>
         <br>
@@ -148,7 +148,7 @@
             dans les lieux verdoyants autour de chez vous.
         </p>
 
-        <h2 class="titre_rose">
+        <h2 class="subtitre_rose">
             Le (mini) design system
         </h2>
         <br>
