plus de lien dans la nav vers la page contact

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <a href="index.html#projets"><button class="nav-btn-txt">Portfolio</button></a>
             <a href="qui_suis-je.html"><button class="nav-btn-txt">Qui suis-je ?</button></a>
             <a href=""><button class="nav-btn-txt">Mon offre</button></a>
-            <a href="contact.html"><button class="nav-btn-txt">Contact</button></a>
+            <!--<a href="contact.html"><button class="nav-btn-txt">Contact</button></a>-->
         </nav>
 
         <div class="container-header">
