--- a/m/index.html
+++ b/m/index.html
@@ -66,11 +66,7 @@
                                     Qui suis-je ?
                                 </a>
                             </li>
-                            <li>
-                                <a href="contact.html">
-                                    Contact
-                                </a>
-                            </li>
+<!--<li><a href="contact.html">Contact</a></li>-->
                         </ul>
                     </div>
                 </div>
