--- a/m/qui_suis-je.html
+++ b/m/qui_suis-je.html
@@ -31,7 +31,7 @@
             <li><a href="index.html">Accueil</a></li>
             <li><a href="index.html#projets">Projets</a></li>
             <li><a href="qui_suis-je.html">Qui suis-je ?</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <!--<li><a href="contact.html">Contact</a></li>-->
           </div>
         </div>
       </div>
