--- a/m/contact.html
+++ b/m/contact.html
@@ -34,7 +34,7 @@
               <li><a href="index.html">Accueil</a></li>
               <li><a href="index.html#projets">Projets</a></li>
               <li><a href="qui_suis-je.html">Qui suis-je ?</a></li>
-              <li><a href="contact.html">Contact</a></li>
+              <!--<li><a href="contact.html">Contact</a></li>-->
               <li><a href="../data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf"><button class="nav_btn-cv">CV</button></a></li>
               <li><a href="https://www.behance.net/mthillayisnard"><button class="nav_btn-lkdn"><img src="../data/imgs/all/logo-linkedin.png" alt="logo de linkedin" class="nav_logo-lkdn"></button></a></li>
               <li><a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><button class="nav_btn-bhnc"><img src="../data/imgs/all/logo-behance.png" alt="logo de behnace" class="nav_logo-bhnc"></button></a></li>
