--- a/l'acoste.html
+++ b/l'acoste.html
@@ -27,18 +27,23 @@
         </nav>
 
         <div class="header">
-            <div class="box-top-header">
-                <p class="le">
-                    le
-                </p>
-                <p class="header_subtitle">
-                    projet personnel
-                </p>
+            <div>
+                <div class="box-top-header">
+                    <p class="le">
+                        le
+                    </p>
+                    <p class="header_subtitle">
+                        projet personnel
+                    </p>
+                </div>
+                <div class="box-header-bot">
+                    <h1 class="header-h1">
+                        L&apos;ACOSTE
+                    </h1>
+                </div>
             </div>
-            <div class="box-header-bot">
-                <h1 class="header-h1">
-                    L&apos;ACOSTE
-                </h1>
+            <div>
+                <img src="data/imgs/L'ACOSTE/embleme-iconique.png" alt="Embleme L'ACOSTE." class="embleme-header">
             </div>
         </div>
         <table class="t1">
