Update L'ACOSTE part 1 and resize imgs

--- a/l'acoste.html
+++ b/l'acoste.html
@@ -27,38 +27,38 @@
         </nav>
 
         <div class="header">
-            <div>
-                <div class="box-top-header">
-                    <p class="le">
-                        le
-                    </p>
-                    <p class="header_subtitle">
-                        projet personnel
-                    </p>
+            <div class="flex">
+                <div>
+                    <div class="box-top-header">
+                        <p class="le">
+                            le
+                        </p>
+                        <p class="header_subtitle">
+                            projet personnel
+                        </p>
+                    </div>
+                    <div class="box-header-bot">
+                        <h1 class="header-h1">
+                            L&apos;ACOSTE
+                        </h1>
+                    </div>
                 </div>
-                <div class="box-header-bot">
-                    <h1 class="header-h1">
-                        L&apos;ACOSTE
-                    </h1>
+                <div>
+                    <img src="data/imgs/L'ACOSTE/embleme-iconique.png" alt="Embleme L'ACOSTE." class="embleme-header">
                 </div>
             </div>
-            <div>
-                <img src="data/imgs/L'ACOSTE/embleme-iconique.png" alt="Embleme L'ACOSTE." class="embleme-header">
-            </div>
+            <a href="https://www.behance.net/mthillayisnard"><button class="hero-btn_behance">Behance</button></a>
         </div>
         <table class="t1">
             <tr>
                 <th class="title-table1">
                     r&#233;sum&#233;/brief
-
                 </th>
                 <th class="title-table2">
                     &eacute;quipe
-
                 </th>
                 <th class="title-table3">
                     logiciels
-
                 </th>
             </tr>
             <tr>
@@ -66,7 +66,7 @@
                     Prenez la marque de votre choix et cr&eacute;er lui un nouvel univers tout en gardant des
                     &eacute;l&eacute;ments cl&eacute;s de son identit&eacute;.
                 </td>
-                <td>
+                <td class="td-mid">
                     Nous &eacute;tions en &eacute;quipe de deux
                 </td>
                 <td>
@@ -79,14 +79,11 @@
             </tr>
         </table>
     </div>
-    <img src="data/imgs/L'ACOSTE/L'ACOSTE-baniere-1.jpg" alt="Bannière de L'ACOSTE" class="banniere">
+    <img src="data/imgs/L'ACOSTE/L'ACOSTE-baniere-crop.jpg" alt="Bannière de L'ACOSTE" class="banniere">
     <div class="background-white">
         <div class="box-h2">
-            <div class="box-le">
-                <p class="txt-le">le</p>
-            </div>
             <h2 class="titre_rose">
-                projet
+                Le projet
             </h2>
         </div>
         <div class="text-corp">
@@ -96,11 +93,8 @@
         </div>
 
         <div class="box-h2">
-            <div class="box-le">
-                <p class="txt-le">le</p>
-            </div>
             <h2 class="titre_rose">
-                logo
+                Le logo
             </h2>
         </div>
         <div class="text-corp">
@@ -121,13 +115,8 @@
     <div class="background-white">
 
         <div class="box-h2">
-            <div class="box-le">
-                <p class="txt-le">
-                    l&apos;
-                </p>
-            </div>
             <h2 class="titre_rose">
-                application
+                L&apos;application
             </h2>
         </div>
 
@@ -137,13 +126,8 @@
         </p>
 
         <div class="box-h2">
-            <div class="box-le">
-                <p class="txt-le">
-                    les
-                </p>
-            </div>
             <h2 class="titre_rose">
-                diff&eacute;rents crocos
+                Les diff&eacute;rents crocos
             </h2>
         </div>
         <img src="data/imgs/L'ACOSTE/crocos.jpg"
@@ -171,25 +155,15 @@
         </p>
 
         <div class="box-h2">
-            <div class="box-le">
-                <p class="txt-le">
-                    le
-                </p>
-            </div>
             <h2 class="titre_rose">
-                design system
+                Le design system
             </h2>
         </div>
         <img src="data/imgs/L'ACOSTE/design-system.jpg" alt="Illustration du design system." class="banniere">
 
         <div class="box-h2">
-            <div class="box-le">
-                <p class="txt-le">
-                    l&apos;
-                </p>
-            </div>
             <h2 class="titre_rose">
-                interface
+                L&apos; interface
             </h2>
         </div>
         <p class="text-corp">
