Changement design L'ACOSTE

--- a/l'acoste.html
+++ b/l'acoste.html
@@ -108,7 +108,7 @@
         <div class="embleme">
             <img src="data/imgs/L'ACOSTE/embleme-iconique.png"
                 alt="Illustration de l'embl&egrave;me iconique de l'acoste" class="embleme-img">
-            <p><b>L&apos;embl&egrave;me iconique</b></p>
+            <p>L&apos;embl&egrave;me iconique</p>
         </div>
     </div>
     <img class="banniere" src="data/imgs/L'ACOSTE/apercu-pages.jpg" alt="Aperçu des pages de l'application.">
