--- a/l'acoste.html
+++ b/l'acoste.html
@@ -126,8 +126,8 @@
         </p>
 
         <div class="box-h2">
-            <h2 class="titre_rose">
-                Les diff&eacute;rents crocos
+            <h2 class="subtitre">
+                Les crocos
             </h2>
         </div>
         <img src="data/imgs/L'ACOSTE/crocos.jpg"
@@ -155,14 +155,14 @@
         </p>
 
         <div class="box-h2">
-            <h2 class="titre_rose">
-                Le design system
+            <h2 class="subtitre">
+                Le (mini) design system
             </h2>
         </div>
         <img src="data/imgs/L'ACOSTE/design-system.jpg" alt="Illustration du design system." class="banniere">
 
         <div class="box-h2">
-            <h2 class="titre_rose">
+            <h2 class="subtitre">
                 L&apos; interface
             </h2>
         </div>
