--- a/leria.html
+++ b/leria.html
@@ -66,7 +66,7 @@
                     J&#8217;ai d&#251; accompagner la cr&#233;ation d&#8217;une filiale et les ai soutenus
                 lors de la conception de leur site web en collaborant pour d&eacute; la meilleure façon de pr&eacute; l'ensemble.
                 </td>
-                <td>
+                <td class="td-mid">
                     J&#8217;ai accompagn&#233; seule une &#233;quipe de 3 juristes lors de ce projet.
                 </td>
                 <td>
