Updates on leria

--- a/leria.html
+++ b/leria.html
@@ -27,18 +27,15 @@
         </nav>
 
         <div class="header">
-            <div class="box-top-header">
-                <p class="le">
-                    le
-                </p>
-                <p class="p2-header">
-                    projet de cr&#233;ation de site
-                </p>
-            </div>
             <div class="box-header-bot">
                 <h1 class="Leria">
                     Leria
                 </h1>
+            </div>
+            <div class="box-top-header">
+                <p class="p2-header">
+                    Le projet de cr&#233;ation de site
+                </p>
             </div>
             <div>
                 <button class="btn_decouvrir_site" onclick="window.location.href='http://leria-insurance.com/;'">
@@ -84,11 +81,8 @@
     <img src="data/imgs/leria/LERIA-eolienne.jpg" alt="Illustration d'une &eacute;olienne" class="img-eolienne">
     <div class="background-white">
         <div class="box-h2">
-            <div class="box-le2">
-                <p class="txt-le2">le</p>
-            </div>
-            <h2 class="titre_rose2">
-                projet
+            <h2 class="titre_rose">
+                Le projet
             </h2>
         </div>
         <div class="text-corp">
@@ -127,13 +121,8 @@
         </div>
 
         <div class="box-h2">
-            <div class="box-le">
-                <p class="txt-le">
-                    les
-                </p>
-            </div>
             <h2 class="titre_rose">
-                Wireframes
+                Les Wireframes
             </h2>
         </div>
 
@@ -152,11 +141,8 @@
     </div>
     <div class="background_rose">
         <div class="box-h2">
-            <div class="box-le">
-                <p class="txt-le">le</p>
-            </div>
             <h2 class="titre_rose">
-                site
+                Le site
             </h2>
         </div>
         <div class="text-corp">Pour ce projet, j&#8217;ai du mettre les mains dans le
@@ -168,11 +154,8 @@
     </div>
     <div class="background-white">
         <div class="box-h2">
-            <div class="box-le">
-                <p class="txt-le">l'</p>
-            </div>
             <h2 class="titre_rose">
-                interface du site
+                L&apos;interface du site
             </h2>
         </div>
         <p class="text-corp">
@@ -214,16 +197,9 @@
             d&eacute;filer. La page devait &ecirc;tre a&eacute;r&eacute;e et chaque fois que possible, nous avons choisi
             d'utiliser des pictogrammes pour soulager la vue.
         </p>
-    </div>
-    <div class="background_rose">
         <div class="box-h2">
-            <div class="box-le">
-                <p class="txt-le">
-                    la
-                </p>
-            </div>
             <h2 class="titre_rose">
-                conclusion
+                La conclusion
             </h2>
         </div>
         <p class="text-corp">
