--- a/leria.html
+++ b/leria.html
@@ -122,11 +122,13 @@
 
         <div class="box-h2">
             <h2 class="titre_rose">
-                Les Wireframes
+                La conception
             </h2>
         </div>
 
         <p class="text-corp">
+            <b>Les wireframes</b>
+            <br/>
             Apr&#232;s avoir &#233;chang&#233; avec l&#8217;&#233;quipe pour un peu plus
             comprendre leur coeur de m&#233;tier et comprendre ce qu&#8217;elle voulait pr&#233;senter &#224; leur
             client, j&#8217;ai pu commencer &#224; travailler de mon c&#244;t&#233;. Ce site &#224; pour but
@@ -139,12 +141,7 @@
                 alt="Image d'illustation pour les wireframes">
         </div>
     </div>
-    <div class="background_rose">
-        <div class="box-h2">
-            <h2 class="titre_rose">
-                Le site
-            </h2>
-        </div>
+    <div class="dark-bg">
         <div class="text-corp">Pour ce projet, j&#8217;ai du mettre les mains dans le
             cambouis et r&#233;aliser
             le site sur Wordpress. J&#8217;ai d&#233;cid&#233; de partir avec une base et de trouver un template
@@ -210,15 +207,13 @@
     </div>
 
     <footer>
-        <a href="data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf" target="_blank" class="nav-aBtn"><button
-                class="btn-cv-footer">T&eacute;l&eacute;charger mon CV</button></a>
+        <a href="data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf" target="_blank"><button class="btn-cv-footer">T&eacute;l&eacute;charger mon CV</button></a><br/>
+        <a href="data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf" target="_blank"><button class="btn-cv-footer">D&eacute;couvrir mes offres</button></a>
         <p class="p-footer">@mthillayisnard
             <script>document.write(new Date().getFullYear())</script>
         </p>
-        <a href="https://www.behance.net/mthillayisnard"><img src="data/imgs/all/logo-behance.png"
-                class="img-footer"></a>
-        <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><img src="data/imgs/all/logo-linkedin.png"
-                class="img-footer"></a>
+        <a href="https://www.behance.net/mthillayisnard"><img src="data/imgs/all/logo-behance.png" class="img-footer"></a>
+        <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><img src="data/imgs/all/logo-linkedin.png" class="img-footer"></a>
     </footer>
 </body>
 </html>
