--- a/leria.html
+++ b/leria.html
@@ -142,12 +142,11 @@
         </div>
     </div>
     <div class="dark-bg">
-        <div class="text-corp">Pour ce projet, j&#8217;ai du mettre les mains dans le
-            cambouis et r&#233;aliser
-            le site sur Wordpress. J&#8217;ai d&#233;cid&#233; de partir avec une base et de trouver un template
-            compatible avec Wordpress. Avec les caract&#233;ristiques discut&#233;es avant et les wireframes et
-            contenus valid&#233; j&#8217;ai pu me mettre &#224; chercher le template id&#233;al.
-        </div>
+        Pour ce projet, j&#8217;ai du mettre les mains dans le
+        cambouis et r&#233;aliser
+        le site sur Wordpress. J&#8217;ai d&#233;cid&#233; de partir avec une base et de trouver un template
+        compatible avec Wordpress. Avec les caract&#233;ristiques discut&#233;es avant et les wireframes et
+        contenus valid&#233; j&#8217;ai pu me mettre &#224; chercher le template id&#233;al.
     </div>
     <div class="background-white">
         <div class="box-h2">
