--- a/m/leria.html
+++ b/m/leria.html
@@ -198,14 +198,18 @@
 
     <footer>
         <a href="../data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf" class="nav-aBtn"><button
-                class="btn-cv-footer">T&eacute;l&eacute;charger mon CV</button></a>
+                class="btn-cv-footer">T&eacute;l&eacute;charger mon CV</button></a> <br/>
+        <a href="" class="nav-aBtn"><button
+            class="btn-cv-footer">D&eacute;couvrir mes offres</button></a>
         <p class="p-footer">@mthillayisnard
             <script>document.write(new Date().getFullYear())</script>
         </p>
-        <a href="https://www.behance.net/mthillayisnard"><img src="../data/imgs/all/logo-behance.png"
-                class="img-footer"></a>
-        <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><img src="../data/imgs/all/logo-linkedin.png"
-                class="img-footer"></a>
+        <a href="https://www.behance.net/mthillayisnard">
+            <img src="../data/imgs/all/logo-behance.png" class="img-footer" alt="Logo de Behance">
+        </a>
+        <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173">
+            <img src="../data/imgs/all/logo-linkedin.png" class="img-footer" alt="Logo de Linkedin">
+        </a>
     </footer>
 </body>
 </html>
