--- a/m/gfa.html
+++ b/m/gfa.html
@@ -117,12 +117,19 @@
             l’application procreate j’ai créer une version plus abouti à présenter aux équipes.</div>
     </div>
     <footer>
-        <a href="data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf" class="nav-aBtn"><button class="btn-cv-footer">T&eacute;l&eacute;charger mon CV</button></a>
+        <a href="../data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf" class="nav-aBtn"><button
+                class="btn-cv-footer">T&eacute;l&eacute;charger mon CV</button></a> <br/>
+        <a href="" class="nav-aBtn"><button
+            class="btn-cv-footer">D&eacute;couvrir mes offres</button></a>
         <p class="p-footer">@mthillayisnard
             <script>document.write(new Date().getFullYear())</script>
         </p>
-        <a href="https://www.behance.net/mthillayisnard"><img src="data/imgs/all/logo-behance.png" class="img-footer"></a>
-        <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><img src="data/imgs/all/logo-linkedin.png" class="img-footer"></a>
+        <a href="https://www.behance.net/mthillayisnard">
+            <img src="../data/imgs/all/logo-behance.png" class="img-footer" alt="Logo de Behance">
+        </a>
+        <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173">
+            <img src="../data/imgs/all/logo-linkedin.png" class="img-footer" alt="Logo de Linkedin">
+        </a>
     </footer>
 </body>
 
