--- a/qui_suis-je.html
+++ b/qui_suis-je.html
@@ -17,13 +17,11 @@
     <body>
         <div class="fjaune">
             <nav>
-                <a href="index.html" class="nav-aTxt"><button class="nav-btn-txt">Accueil</button></a>
-                <a href="index.html#projets" class="nav-aTxt"><button class="nav-btn-txt">Mes projets</button></a>
-                <a href="qui_suis-je.html" class="nav-aTxt"><button class="nav-btn-txt">Qui suis-je ?</button></a>
-                <!--<a href="contact.html" class="nav-aTxt"><button class="nav-btn-txt">Contact</button></a>-->
-                <a href="data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf" class="nav-aBtn"><button class="btn-cv">CV</button></a>
-                <a href="https://www.behance.net/mthillayisnard" class="nav-aBtn"><button class="btn-behance">Be</button></a>
-                <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173" class="nav-aBtn"><button class="btn-linkedin">In</button></a>
+                <a href="index.html"><button class="nav-btn-txt">Accueil</button></a>
+                <a href="index.html#projets"><button class="nav-btn-txt">Portfolio</button></a>
+                <a href="qui_suis-je.html"><button class="nav-btn-txt">Qui suis-je ?</button></a>
+                <a href=""><button class="nav-btn-txt">Mon offre</button></a>
+                <!--<a href="contact.html"><button class="nav-btn-txt">Contact</button></a>-->
             </nav>
 
             <div class="container-header">
