--- a/l'acoste.html
+++ b/l'acoste.html
@@ -22,7 +22,7 @@
             <a href="index.html"><button class="nav-btn-txt">Accueil</button></a>
             <a href="index.html#projets"><button class="nav-btn-txt">Portfolio</button></a>
             <a href="qui_suis-je.html"><button class="nav-btn-txt">Qui suis-je ?</button></a>
-            <a href=""><button class="nav-btn-txt">Mon offre</button></a>
+            <!--<a href=""><button class="nav-btn-txt">Mon offre</button></a>-->
             <!--<a href="contact.html"><button class="nav-btn-txt">Contact</button></a>-->
         </nav>
 
