Update file path for cv

--- a/bouygues_telecom.html
+++ b/bouygues_telecom.html
@@ -282,7 +282,7 @@
 
     </div>
     <footer>
-        <a href="data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf" target="_blank" class="nav-aBtn"><button
+        <a href="cv/CV - Manon THILLAY-ISNARD.pdf" target="_blank" class="nav-aBtn"><button
                 class="btn-cv-footer">T&eacute;l&eacute;charger mon CV</button></a>
         <p class="p-footer">@mthillayisnard
             <script>document.write(new Date().getFullYear())</script>
