Minor graphic update and file path

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </div>
         </div>
         <div class="hero-footer">
-            <a href="data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf"><button class="btn-cv">Mon CV</button></a>
+            <a href="cv/CV - Manon THILLAY-ISNARD.pdf"><button class="btn-cv">Mon CV</button></a>
             <a href="https://www.behance.net/mthillayisnard"><button class="btn-behance"></button></a>
             <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><button class="btn-linkedin"></button></a>
         </div>
@@ -93,7 +93,7 @@
                     <img src="data/imgs/index/l'acoste.jpg" alt="Image d'illustration du projet L’ACOSTE." class="project-img">
                 </a>
                 <h3 class="project-title">L’ACOSTE</h3>
-                <p class="project-subtitle">Refonte de l’identité & création d’app</p>
+                <p class="project-subtitle">Refonte d’identité & création d’app</p>
                 <div class="container-btn-projects-cards">
                     <a href="l'acoste.html">
                         <button class="projects-buttons-left">
