--- a/bouygues_telecom.html
+++ b/bouygues_telecom.html
@@ -40,6 +40,7 @@
                     Bouygues Telecom
                 </h1>
             </div>
+            <a href="https://www.behance.net/mthillayisnard"><button class="hero-btn_behance">Behance</button></a>
         </div>
         <table class="t1">
             <tr>
@@ -65,7 +66,7 @@
                     Suite &agrave; notre s&eacute;lection, nous avons r&eacute;ussi &agrave; atteindre la finale et
                     &agrave; pr&eacute;senter notre projet dans les locaux du groupe.
                 </td>
-                <td>
+                <td class="td-mid">
                     Nous &eacute;tions en &eacute;quipe de deux.
                 </td>
                 <td>
