--- a/m/index.html
+++ b/m/index.html
@@ -158,7 +158,7 @@
                 <p class="project-subtitle">Proposition de solution</p>
                 <div class="container-btn-projects-cards">
                     <a href="bouygues-telecom.html">
-                        <button class="projects-buttons-left">
+                        <button class="projects-buttons-left" style="filter: grayscale(1);">
                             &Agrave; venir
                         </button>
                     </a>
