--- a/m/index.html
+++ b/m/index.html
@@ -239,8 +239,8 @@
     <footer>
         <a href="../data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf" class="nav-aBtn"><button
                 class="btn-cv-footer">T&eacute;l&eacute;charger mon CV</button></a> <br/>
-        <a href="" class="nav-aBtn"><button
-            class="btn-cv-footer">D&eacute;couvrir mes offres</button></a>
+        <!--<a href="" class="nav-aBtn"><button
+            class="btn-cv-footer">D&eacute;couvrir mes offres</button></a>-->
         <p class="p-footer">@mthillayisnard
             <script>document.write(new Date().getFullYear())</script>
         </p>
