--- a/m/index.html
+++ b/m/index.html
@@ -133,7 +133,7 @@
                         class="project-img">
                 </a>
                 <h3 class="project-title">L’ACOSTE</h3>
-                <p class="project-subtitle">Refonte de l’identité & création d’app</p>
+                <p class="project-subtitle">Refonte d’identité & création d’app</p>
                 <div class="container-btn-projects-cards">
                     <a href="l'acoste.html">
                         <button class="projects-buttons-left">
