--- a/gfa.html
+++ b/gfa.html
@@ -9,6 +9,7 @@
     <link rel="shortcut icon" href="data/imgs/all/MTI.png" type="image/x-icon">
     <link rel="stylesheet" href="data/css/style-GFA.css">
     <link rel="stylesheet" href="data/css/nav.css">
+    <link rel="stylesheet" href="data/css/footer.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
 
@@ -26,82 +27,133 @@
         </nav>
         
         <div class="header">
-            <div class="box-top-header">
-                <p class="le">le</p>
-                <p class="create_logo">projet de création de logo</p>
+            <div class="flex">
+                <div>
+                    <div class="box-top-header">
+                        <p class="le">
+                            le
+                        </p>
+                        <p class="header_subtitle">
+                            projet création de logo
+                        </p>
+                    </div>
+                    <div class="box-header-bot">
+                        <h1 class="header-h1">
+                            GFA Funding
+                        </h1>
+                    </div>
+                </div>
+                <div>
+                    <img src="data/imgs/gfa/GFA-logo.png" alt="Logo GFA." class="embleme-header">
+                </div>
             </div>
-            <div class="box-header-bot">
-                <h1 class="GFA_Funding">GFA Funding</h1>
-            </div>
+            <a href="https://www.behance.net/mthillayisnard"><button class="hero-btn_behance">Behance</button></a>
         </div>
         <table class="t1">
             <tr>
-                <th style="width:45%">R&#233;sum&#233;/brief</th>
-                <th style="width:35%">&Eacute;quipe</th>
-                <th style="width:20%">Logiciels</th>
+                <th class="title-table1">
+                    r&#233;sum&#233;/brief
+                </th>
+                <th class="title-table2">
+                    &eacute;quipe
+                </th>
+                <th class="title-table3">
+                    logiciels
+                </th>
             </tr>
             <tr>
-                <td>Le brief est simple : cr&#233;er une identit&#233; visuelle &#224; un produit. Mais le produit est,
-                    lui, moins simple : une solution d&#8217;investissement pour la construction. La difficult&#233; ici
-                    a &#233;t&#233; de rendre ce produit &#8220;sexy&#8221; et reconnaissable facilement. Je vous invite
-                    aujourd&#8217;hui &#224; suivre mon precessus.</td>
-                <td>J&#8217;ai agi en tant que responsable du projet et est travaill&#233; en &#233;troite collaboration
-                    pour comprendre le produit et le traduire &#224; travers une identit&#233; propre.</td>
-                <td>Illustrator<br>
-                    InDesign <br>
-                    Pinterest<br>
-                    Behance<br>
-                    Procreate</td>
+                <td>
+                    Le brief est simple : créer une identité visuelle pour un produit. Cependant, le produit lui-même est moins simple : il s'agit d'une solution d'investissement pour la construction. La difficulté réside dans la nécessité de rendre ce produit attrayant ("sexy") et aisément reconnaissable. Je vous convie aujourd'hui à suivre mon processus.
+                </td>
+                <td class="td-mid">
+                    J’ai agi en tant que responsable du projet et est travaillé en étroite collaboration pour comprendre le produit et le traduire à travers une identité propre.
+                </td>
+                <td>
+                    Illustrator
+                    <br>
+                    InDesign
+                    <br>
+                    Pinterest
+                    <br>
+                    Behance
+                    <br>
+                    Procreate
+                </td>
             </tr>
         </table>
     </div>
-    <div class="black">
-        <div class="box-h2projet">
-            <div class="box-le">
-                <p class="txt-le">le</p>
-            </div>
-            <h2 class="projet">
-                projet
+    <img src="data/imgs/gfa/GFA-bannierre.jpg" alt="Bannière de GFA Funding" class="banniere">
+    <div class="background-white">
+        <div class="box-h2">
+            <h2 class="titre_rose">
+                Le projet
             </h2>
         </div>
-        <div class="comprendre_GFA">Comme mes autres projets j’ai commencé par comprendre ce qu’est la GFA... Et on va
-            dire que ça n’a pas été le sujet le plus facile que j’ai pu avoir. Mais c’est ça qui est intéressant dans ce
-            genre de projets. </div>
-        <div class="box-h2projet">
-            <div class="box-le">
-                <p class="txt-le">les</p>
-            </div>
-            <h2 class="projet">
-                esquisses
+        <div class="text-corp">
+            Comme pour mes précédents projets, j'ai débuté en cherchant à comprendre ce qu'est la GFA... et il est indéniable que ce n'a pas été le sujet le plus simple que j'aie jamais abordé. Cependant, c'est précisément ce qui rend ce type de projet si captivant.
+        </div>
+
+        <div class="box-h2">
+            <h2 class="titre_rose">
+                Les esquisses
             </h2>
         </div>
-        <div class="comprendre_GFA">J’ai commencé en griffonnant sur mon carnet différentes idées pour le logo. En y
+        <div class="text-corp">
+            J’ai commencé en griffonnant sur mon carnet différentes idées pour le logo. En y
             regardant de plus près, c’est un logo plus en longueur et se lisant de gauche à droite qui paraissait le
             plus cohérent. Après avoir validé avec les équipes, j’ai décidé de réfléchir plus en profondeur à ce logo.
         </div>
-        <img class="img_feuille" src="data/imgs/gfa/img-manon-feuille.png" alt="">
+        <div class="flex">
+            <img class="cinquante" src="data/imgs/gfa/shem-logo.jpg" alt="Shéma d'essais de logo sur papier">
+        </div>
 
-        <div class="box-h2projet">
-            <div class="box-le">
-                <p class="txt-le">les</p>
-            </div>
-            <h2 class="projet">
-                couleurs
+        <div class="box-h2">
+            <h2 class="titre_rose">
+                Les couleurs
             </h2>
         </div>
-        <div class="comprendre_GFA">Pour les couleurs, pas grand chose n’est laissé à l’imagination. En effet, je dois
-            partir des couleurs de l’entité et rester dans les mêmes tons. </div>
-        <div class="box-h2projet">
-            <div class="box-le">
-                <p class="txt-le">les</p>
-            </div>
-            <h2 class="projet">
-                croquis
+        <div class="text-corp">
+            En ce qui concerne les couleurs, il y a peu de place pour l'imagination.
+            En effet, je suis contraint de m'appuyer sur les couleurs préexistantes de l'entité et de demeurer dans la même gamme chromatique.
+        </div>
+
+        <div class="flex-circle">
+            <div class="circle1"></div>
+            <div class="circle2"></div>
+            <div class="circle3"></div>
+        </div>
+
+        <div class="box-h2">
+            <h2 class="titre_rose">
+                Le logo
             </h2>
         </div>
-        <div class="comprendre_GFA">Fini les esquisses et bonjour les croquis, à l’aide de ma tablette et de
-            l’application procreate j’ai créer une version plus abouti à présenter aux équipes.</div>
+        <div class="text-corp">
+            En ce qui concerne les couleurs, il y a peu de place pour l'imagination. En effet, je suis contraint de m'appuyer sur les couleurs préexistantes de l'entité et de demeurer dans la même gamme chromatique.
+        </div>
+        <img src="data/imgs/gfa/GFA-bannierre_exp.jpg" alt="Explication de la bannière GFA Funding" class="banniere">
+
+        <div class="box-h2">
+            <h2 class="titre_rose">
+                L'élément reconnaissable
+            </h2>
+        </div>
+        <div class="text-corp">
+            Je voulais pour ce logo un élément facilement réutilisable et reconnaissable. Pour ce faire et après plusieurs recherches j'ai décidé de faire une forme rappelant une forme de toit, clin d'oeil au côté GFA. Les couleurs sont celles du logo entier pour rappeler le code couleur.
+        </div>
+        <div class="flex">
+            <img src="data/imgs/gfa/GFA-logo.png" alt="Logo de GFA Funding" class="vingt">
+        </div>
     </div>
-</body>
 
+    <footer>
+        <a href="cv/CV - Manon THILLAY-ISNARD.pdf" target="_blank"><button class="btn-cv-footer">T&eacute;l&eacute;charger mon CV</button></a><br/>
+        <!--<a href="data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf" target="_blank"><button class="btn-cv-footer">D&eacute;couvrir mes offres</button></a>-->
+        <p class="p-footer">@mthillayisnard
+            <script>document.write(new Date().getFullYear())</script>
+        </p>
+        <a href="https://www.behance.net/mthillayisnard"><img src="data/imgs/all/logo-behance.png" class="img-footer"></a>
+        <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><img src="data/imgs/all/logo-linkedin.png" class="img-footer"></a>
+    </footer>
+</body>
 </html>
