--- a/index.html
+++ b/index.html
@@ -114,11 +114,11 @@
                 <h3 class="project-title">GFA Funding</h3>
                 <p class="project-subtitle">Création d’identité</p>
                 <div class="container-btn-projects-cards">
-                <!--<a href="gfa.html">-->
-                        <button class="projects-buttons-left" style="filter: grayscale(1);">
-                            &Agrave; venir...
+                <a href="gfa.html">
+                        <button class="projects-buttons-left">
+                            D&eacute;couvrir le projet
                         </button>
-                <!--</a>-->
+                </a>
                     <a href="https://www.behance.net/gallery/167983107/GFA-Funding-Cration-didentit/modules/960526389" target="_blank">
                         <button class="projects-buttons-right">
                             Behance
