--- a/m/index.html
+++ b/m/index.html
@@ -237,19 +237,13 @@
         </div>
     </div>
     <footer>
-        <a href="../data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf" class="nav-aBtn"><button
-                class="btn-cv-footer">T&eacute;l&eacute;charger mon CV</button></a> <br/>
-        <!--<a href="" class="nav-aBtn"><button
-            class="btn-cv-footer">D&eacute;couvrir mes offres</button></a>-->
+        <a href="cv/CV_UX_UI%20-%20Manon%20THILLAY-ISNARD.pdf" target="_blank"><button class="btn-cv-footer">T&eacute;l&eacute;charger mon CV</button></a><br/>
+        <a href="portfolio/Portfolio%202024%20-%20Manon%20THILLAY-ISNARD.pdf" target="_blank"><button class="btn-cv-footer">T&eacute;l&eacute;charger mon Portfolio</button></a>-
         <p class="p-footer">@mthillayisnard
             <script>document.write(new Date().getFullYear())</script>
         </p>
-        <a href="https://www.behance.net/mthillayisnard">
-            <img src="../data/imgs/all/logo-behance.png" class="img-footer" alt="Logo de Behance">
-        </a>
-        <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173">
-            <img src="../data/imgs/all/logo-linkedin.png" class="img-footer" alt="Logo de Linkedin">
-        </a>
+        <a href="https://www.behance.net/mthillayisnard"><img src="data/imgs/all/logo-behance.png" class="img-footer"></a>
+        <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><img src="data/imgs/all/logo-linkedin.png" class="img-footer"></a>
     </footer>
 </body>
 </html>
