--- a/contact.html
+++ b/contact.html
@@ -24,9 +24,13 @@
                 <!--<a href="contact.html"><button class="nav-btn-txt">Contact</button></a>-->
             </nav>
             <footer>
-                <p class="p-footer">@mthillayisnard <script>document.write(new Date().getFullYear())</script></p>
-                <a href="https://www.behance.net/mthillayisnard"><img src="data/imgs/all/logo-behance-noir.png" class="img-footer"></a>
-                <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><img src="data/imgs/all/logo-linkedin-noir.png" class="img-footer"></a>
+                <a href="cv/CV_UX_UI%20-%20Manon%20THILLAY-ISNARD.pdf" target="_blank"><button class="btn-cv-footer">T&eacute;l&eacute;charger mon CV</button></a><br/>
+                <a href="portfolio/Portfolio%202024%20-%20Manon%20THILLAY-ISNARD.pdf" target="_blank"><button class="btn-cv-footer">T&eacute;l&eacute;charger mon Portfolio</button></a>-
+                <p class="p-footer">@mthillayisnard
+                    <script>document.write(new Date().getFullYear())</script>
+                </p>
+                <a href="https://www.behance.net/mthillayisnard"><img src="data/imgs/all/logo-behance.png" class="img-footer"></a>
+                <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><img src="data/imgs/all/logo-linkedin.png" class="img-footer"></a>
             </footer>
         </div>
     </body>
