--- a/leria.html
+++ b/leria.html
@@ -207,7 +207,7 @@
 
     <footer>
         <a href="cv/CV_UX_UI%20-%20Manon%20THILLAY-ISNARD.pdf" target="_blank"><button class="btn-cv-footer">T&eacute;l&eacute;charger mon CV</button></a><br/>
-        <a href="portfolio/Portfolio%202024%20-%20Manon%20THILLAY-ISNARD.pdf" target="_blank"><button class="btn-cv-footer">T&eacute;l&eacute;charger mon Portfolio</button></a>-
+        <a href="portfolio/Portfolio%202024%20-%20Manon%20THILLAY-ISNARD.pdf" target="_blank"><button class="btn-cv-footer">T&eacute;l&eacute;charger mon Portfolio</button></a>
         <p class="p-footer">@mthillayisnard
             <script>document.write(new Date().getFullYear())</script>
         </p>
