maj footer mobile

--- a/m/l'acoste.html
+++ b/m/l'acoste.html
@@ -292,8 +292,8 @@
         <p class="p-footer">@mthillayisnard
             <script>document.write(new Date().getFullYear())</script>
         </p>
-        <a href="https://www.behance.net/mthillayisnard"><img src="data/imgs/all/logo-behance.png" class="img-footer"></a>
-        <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><img src="data/imgs/all/logo-linkedin.png" class="img-footer"></a>
+        <a href="https://www.behance.net/mthillayisnard"><img src="../data/imgs/all/logo-behance.png" class="img-footer"></a>
+        <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><img src="../data/imgs/all/logo-linkedin.png" class="img-footer"></a>
     </footer>
 </body>
 
