--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Je suis une designer UI/UX créative et motivée, passionnée par l'innovation et la découverte de nouvelles approches pour améliorer l'expérience utilisateur. Mon expérience en design est complétée par mes compétences en UX suite à mes différentes expériences et projets professionnels mais aussi personnels.">
-    <meta http-equiv="refresh" content="3600">
 
     <link rel="shortcut icon" href="data/imgs/all/MTI.png" type="image/x-icon">
     <link rel="stylesheet" href="data/css/nav.css">
@@ -45,9 +44,9 @@
                         <h1 class="horizontal-h1">Manon</h1>
                     </div>
                     <div class="button-container">
-                        <button>Web Design</button>
-                        <button class="btn-2-acc">UI design</button>
-                        <button class="btn-2-acc">UX Design Research</button>
+                        <button>Web design</button>
+                        <button>UI design</button>
+                        <button>UX design</button>
                     </div>
                 </div>
             </div>
@@ -146,10 +145,10 @@
                 </div>
             </div>
             <div class="box-card">
-                <a href="http://www.sylvassur.com/">
-                    <img src="data/imgs/index/sylvassur.jpg" alt="Image d'illustration du projet Sylvassur." class="project-img">
+                <a href="jimmz.html">
+                    <img src="data/imgs/index/jimmz.jpg" alt="Image d'illustration du projet JIMMZ." class="project-img">
                 </a>
-                <h3 class="project-title">Sylvassur</h3>
+                <h3 class="project-title">Jimmz</h3>
                 <p class="project-subtitle">Création Web & vidéos tutos</p>
                 <div class="container-btn-projects-cards">
                 <!--<a href="sylvassur.html">-->
