--- a/m/index.html
+++ b/m/index.html
@@ -85,9 +85,9 @@
                     <h1 class="horizontal-h1">Manon</h1>
                 </div>
                 <div class="button-container">
-                    <button>UI/UX Design</button>
-                    <button class="btn-2-acc">Web Design</button>
-                    <button class="btn-2-acc">Gestion de projet</button>
+                    <button>Web design</button>
+                    <button class="btn-2-acc">UI design</button>
+                    <button class="btn-2-acc">UX design</button>
                 </div>
             </div>
             <div class="container-down-arrow">
