--- a/m/qui_suis-je.html
+++ b/m/qui_suis-je.html
@@ -8,8 +8,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="shortcut icon" href="../data/imgs/all/MTI.png" type="image/x-icon">
-  <link rel="stylesheet" href="css/style-qui_suis-je.css">
   <link rel="stylesheet" href="css/nav.css">
+  <link rel="stylesheet" href="css/style-qui_suis-je.css">
+  <link rel="stylesheet" href="css/footer.css">
   <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
   <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
 
@@ -64,6 +65,15 @@
       <img src="../data/imgs/qui-suis-je/manon-enfant.png" alt="Photographie de Manon enfant." class="manon-enfant">
     </div>
   </div>
+  <footer>
+    <a href="cv/CV_UX_UI%20-%20Manon%20THILLAY-ISNARD.pdf" target="_blank"><button class="btn-cv-footer">T&eacute;l&eacute;charger mon CV</button></a><br/>
+    <a href="portfolio/Portfolio%202024%20-%20Manon%20THILLAY-ISNARD.pdf" target="_blank"><button class="btn-cv-footer">T&eacute;l&eacute;charger mon Portfolio</button></a>
+    <p class="p-footer">@mthillayisnard
+        <script>document.write(new Date().getFullYear())</script>
+    </p>
+    <a href="https://www.behance.net/mthillayisnard"><img src="../data/imgs/all/logo-behance.png" class="img-footer"></a>
+    <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><img src="../data/imgs/all/logo-linkedin.png" class="img-footer"></a>
+</footer>
 </body>
 
 </html>
