--- a/qui_suis-je.html
+++ b/qui_suis-je.html
@@ -7,8 +7,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <link rel="shortcut icon" href="data/imgs/all/MTI.png" type="image/x-icon">
-        <link rel="stylesheet" href="data/css/style-qui_suis-je.css">
         <link rel="stylesheet" href="data/css/nav.css">
+        <link rel="stylesheet" href="data/css/style-qui_suis-je.css">
+        <link rel="stylesheet" href="data/css/footer.css">
         <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
         <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
 
@@ -36,9 +37,9 @@
                             <h1 class="horizontal-h1">Manon</h1>
                         </div>
                         <div class="button-container">
-                            <button>UX/UI design</button>
                             <button>Web design</button>
-                            <button>UX Reasearch</button>
+                            <button>UI design</button>
+                            <button>UX design</button>
                         </div>
                         <p class="bio">
                             Passionnée de création et avec un esprit rempli d’imagination depuis mon plus jeune âge, j’ai décidé de me tourner vers un métier passion. C’est pourquoi aujourd’hui je me suis lancée dans la conception produit mais aussi le web design et la créa pure et dure.
@@ -49,12 +50,15 @@
                     </div>
                 </div>
             </div>
-            <footer>
-                <p class="p-footer">@mthillayisnard <script>document.write(new Date().getFullYear())</script></p>
-              
-                <a href="https://www.behance.net/mthillayisnard"><img src="data/imgs/all/logo-behance-noir.png" class="img-footer"></a>
-                <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><img src="data/imgs/all/logo-linkedin-noir.png" class="img-footer"></a>
-            </footer>
         </div>
+        <footer>
+            <a href="cv/CV_UX_UI%20-%20Manon%20THILLAY-ISNARD.pdf" target="_blank"><button class="btn-cv-footer">T&eacute;l&eacute;charger mon CV</button></a><br/>
+            <a href="portfolio/Portfolio%202024%20-%20Manon%20THILLAY-ISNARD.pdf" target="_blank"><button class="btn-cv-footer">T&eacute;l&eacute;charger mon Portfolio</button></a>
+            <p class="p-footer">@mthillayisnard
+                <script>document.write(new Date().getFullYear())</script>
+            </p>
+            <a href="https://www.behance.net/mthillayisnard"><img src="data/imgs/all/logo-behance.png" class="img-footer"></a>
+            <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><img src="data/imgs/all/logo-linkedin.png" class="img-footer"></a>
+        </footer>
     </body>
 </html>
