--- a/m/index.html
+++ b/m/index.html
@@ -194,11 +194,11 @@
             </div>
             <span></span>
             <div class="box-card">
-                <a href="sylvassur.html">
-                    <img src="../data/imgs/index/sylvassur.jpg" alt="Image d'illustration du projet Sylvassur."
+                <a href="jimmz.html">
+                    <img src="../data/imgs/index/jimmz.jpg" alt="Image d'illustration du projet JIMMZ."
                         class="project-img">
                 </a>
-                <h3 class="project-title">Sylvassur</h3>
+                <h3 class="project-title">Jimmz</h3>
                 <p class="project-subtitle">Création Web & vidéos tutos</p>
                 <div class="container-btn-projects-cards">
                 <!--<a href="sylvassur.html">-->
