--- a/gfa.html
+++ b/gfa.html
@@ -7,8 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="shortcut icon" href="data/imgs/all/MTI.png" type="image/x-icon">
-    <link rel="stylesheet" href="data/css/style-GFA.css">
     <link rel="stylesheet" href="data/css/nav.css">
+    <link rel="stylesheet" href="data/css/commons.css">
+    <link rel="stylesheet" href="data/css/style-GFA.css">
     <link rel="stylesheet" href="data/css/footer.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
@@ -142,7 +143,7 @@
             Je voulais pour ce logo un élément facilement réutilisable et reconnaissable. Pour ce faire et après plusieurs recherches j'ai décidé de faire une forme rappelant une forme de toit, clin d'oeil au côté GFA. Les couleurs sont celles du logo entier pour rappeler le code couleur.
         </div>
         <div class="flex">
-            <img src="data/imgs/gfa/GFA-logo.png" alt="Logo de GFA Funding" class="vingt">
+            <img src="data/imgs/gfa/GFA-logo.png" alt="Logo de GFA Funding" class="logo-bot">
         </div>
     </div>
 
